apps/it-tools/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: it-tools
  labels:
    app.kubernetes.io/part-of: ranch-lab
    pod-security.kubernetes.io/enforce: baseline
